syntax = "proto3";

option java_multiple_files = true;
option java_package = "grpc";
option java_outer_classname = "MessengerProto";

service Messenger {
    rpc SendMessage(MessageRequest) returns (MessageResponse) {}
    rpc GetMessagesForUser(UserRequest) returns (MessageList) {}
}

message MessageRequest {
    string sender = 1;
    string recipient = 2;
    string message = 3;
}

message MessageResponse {
    string status = 1;
}

message UserRequest {
    string username = 1;
}

message MessageList {
    repeated string messages = 1;
}
